# nene-quest

./: .gitignore  LICENSE  README.md  Specifications.md  meson.build  rules.md  specifications.md
nenequest/: CMakeLists.txt  Makefile  NeneQuest  meson.build
nenequest/cmake_modules/: FindSFML.cmake
nenequest/config/: config.ini
nenequest/headers/: arrow.hpp  background.hpp  boar.hpp  bonus.hpp  bonusHp.hpp  breakableObject.hpp  bridgePit.hpp  config.hpp  configManager.h  configManager.hpp  configParameter.hpp  configParser.h  configParser.hpp  configProperty.h  configProperty.hpp  customMap.hpp  dragon.hpp  enemy.hpp  entity.hpp  flame.hpp  game.hpp  gamemode.hpp  gameover.hpp  itemWeapon.hpp  levelManager.hpp  levelParser.hpp  lifebar.hpp  livingEntity.hpp  menu.hpp  meson.build  movableEntity.hpp  parserCommand.hpp  parserFunction.hpp  player.hpp  playerID.hpp  projectile.hpp  randomCloud.hpp  randomMountain.hpp  randomShape.hpp  screen.hpp  (+5 more)
nenequest/headers/commands/: cmdBridge.h  cmdBridge.hpp  cmdChest.h  cmdChest.hpp  cmdScroll.h  cmdScroll.hpp  cmdStart.h  cmdStart.hpp  cmdWeapon.hpp
nenequest/levels/: level0.nnq
nenequest/src/: arrow.cpp  background.cpp  boar.cpp  bonus.cpp  bonusHp.cpp  breakableObject.cpp  bridgePit.cpp  customMap.cpp  dragon.cpp  enemy.cpp  entity.cpp  flame.cpp  game.cpp  gameover.cpp  itemWeapon.cpp  levelManager.cpp  levelParser.cpp  lifebar.cpp  livingEntity.cpp  main.cpp  menu.cpp  meson.build  movableEntity.cpp  parserCommand.cpp  parserFunction.cpp  player.cpp  randomCloud.cpp  randomMountain.cpp  weapon.cpp  weaponType.cpp  world.cpp
nenequest/src/env/: game.cpp  gameover.cpp  levelManager.cpp  world.cpp
nenequest/src/env/background/: background.cpp  randomCloud.cpp  randomMountain.cpp
nenequest/src/env/enums/: weaponType.cpp
nenequest/src/env/ui/: lifebar.cpp
nenequest/src/game/: game.cpp  gameover.cpp  levelManager.cpp  world.cpp
nenequest/src/game/background/: background.cpp  randomCloud.cpp  randomMountain.cpp
nenequest/src/game/ids/: weaponType.cpp
nenequest/src/game/ui/: lifebar.cpp
nenequest/src/objects/: entity.cpp
nenequest/src/objects/bonuses/: bonus.cpp  bonusHp.cpp  itemWeapon.cpp
nenequest/src/objects/characters/: boar.cpp  dragon.cpp  enemy.cpp  player.cpp
nenequest/src/objects/characters/enemies/: boar.cpp  dragon.cpp  enemy.cpp
nenequest/src/objects/projectiles/: arrow.cpp  flame.cpp  projectile.cpp
nenequest/src/objects/staticObjects/: breakableObject.cpp  bridgePit.cpp  weapon.cpp
nenequest/src/system/: menu.cpp
nenequest/src/system/options/: configManager.cpp  configParameter.cpp  configProperty.cpp  customMap.cpp
nenequest/src/system/parser/: configParser.cpp  levelParser.cpp  parserCommand.cpp  parserFunction.cpp
nenequest/src/system/parser/commands/: parserCommand.cpp
src/launch/: Main.cpp
